# redeval

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  rag.py  rag_chatbot.py  rag_simulator.py  references.md  simulator_mistral.py  simulator_rag.py
data/examples/: GaslightingSimulator_chat_mistral_7b_simulation.json  GaslightingSimulator_rag_gpt-3.5-turbo-16k_simulation.json  GuiltingSimulator_chat_mistral_7b_simulation.json  GuiltingSimulator_rag_gpt-3.5-turbo-16k_simulation.json  PerformanceSimulator_simulation.json  PromptInjectionAttackSimulator_simulation.json  ResearchPurposeSimulator_chat_mistral_7b_simulation.json  ResearchPurposeSimulator_rag_gpt-3.5-turbo-16k_simulation.json  SocialEngineeringAttackSimulator_simulation.json  ToxicitySimulator_simulation.json
epiphany/: evaluation.py  question_generation.py  question_mutator.py  rag_agent.py  rag_evaluator.py
epiphany/agents/: chatbot.py  conservative_human_agent.py  human_agent.py
epiphany/evaluators/: answer_relevance.py  context_relevance.py  faithfulness.py  safety.py  toxicity.py
epiphany/llms/: llama_70b_completion.py  mistral_7b_completion.py
epiphany/simulators/: conservative_social_engineering_attack_simulator.py  gaslighting_simulator.py  guilting_simulator.py  performance_simulator.py  prompt_injection_attack_simulator.py  research_purpose_simulator.py  toxicity_simulator.py
redeval/agents/: chatbot.py  rag_agent.py
redeval/evaluators/: safety.py  (+5 more)
tests/: test_answer_relevance.py  test_context_relevance.py  test_faithfulness.py  test_lamma_index_agent.py  test_lamma_index_generator.py  test_load_openai_key.py  test_toxicity.py
(+46 files in other folders)
