[tool.poetry]
name = "epiphaneia"
version = "0.1.0"
description = ""
authors = ["Christos <chziakas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.28.0"
pandas = "^2.1.0"
python-dotenv = "^1.0.0"
datasets = "^2.14.5"
scikit-learn = "^1.3.0"
llama-index = "^0.8.40"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
